fix: Fix unreadable text in high-contrast-mode

--- a/app/javascript/styles/contrast/variables.scss
+++ b/app/javascript/styles/contrast/variables.scss
@@ -21,5 +21,5 @@ $ui-highlight-color: $classic-highlight-color !default;
   $action-button-color: lighten($ui-base-color, 50%),
   $inverted-text-color: $black,
   $lighter-text-color: darken($ui-base-color, 6%),
-  $light-text-color: darken($ui-primary-color, 40%)
+  $light-text-color: $classic-primary-color
 );
